--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,21 +1,5 @@
-engines:
-  bundler-audit:
-      enabled: true
-  csslint:
-    enabled: false
-  eslint:
-    enabled: false
-  fixme:
-    enabled: false
-  phpcodesniffer:
-    enabled: false
-  phpmd:
-    enabled: false
-  rubocop:
-      enabled: false
-ratings:
-  paths:
-  - Gemfile.lock
+languages:
+   Ruby: true
 
 exclude_paths:		
 - test/**/*		
